--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "chart.js": "^4.5.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
